
	* new levels:
	  - Black market version with One-eyed Sam promoted to management
	  - Special non-persistent level in the Ruins of Moria branch

	* options:
	  - default of sortloot changed to 'loot'
	  - Allow exact numbers in STATUSCOLOR settings (from NAO)
	  - Permanent hallucination conduct option: perma_hallu
	  - Disable death drops conduct option: deathdropless
	  - New options:
	    - wound_message -- Healers can receive Crawl-style damage
		messages indicating the current health of their foes
	    - invweight -- Display current weight of your inventory
		and the maximum amount you can carry on the status
		line (from SLASH'EM 0.7)
	    - showweight -- Display the weight of individial items in
		your inventory (from SLASH'EM 0.7)
	    - nameempty -- Automatically #name wands known to be empty
		
	* role differentiation:
	  - Tourists get automatic type identification for shop items
	  - Healers can see how wounded monsters are (by L)
	  - Knights get a weight bonus for body armor heavier than
	      studded leather armor
	  - Archeologists can enchant fedoras to +7

	* skill changes:
	  - Galloping duration depends on riding skills (idea by Beolach,
	      code by Pasi Kallinen)
	  - Skill gain for spells is faster than skill gain for weapons
	  - Riding skill is exercised more quickly, closer to vanilla

	* extended commands:
	  - #vanquished: Shows a list of all vanquished monsters
	  - #tip: Tips over a container to empty it of its contents

	* user interface improvements:
	  - HP notify, showing HP changes in the message area (from NAO)
	  - Menus made aware of the maximum count of an item (by heinrich5991)
	  - Message for some monster cancellation events
	  - When standing on Elbereth, show it in status lines
	  - New paranoid options: paranoid_lava and paranoid_water, asks for
	      confirmation before walking into known lava and water squares
	      unless the player knows that worn water walking boots make it safe